Correction code html apres W3C

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </nav>
     </header>
     <!-- section -->
-    <section id="main">
+    <div id="main">
 
       <div id="contenair">
         <article id="recettes">
@@ -64,10 +64,10 @@
             </div>
             <h3>Préparation</h3>
             <p class="preparation">Dans un saladier à l'aide d'une cuillère en bois ou dans le bol d'un robot, mélanger
-              la farine avec le sucre puis ajouter les oeufs progressivement un à un.</br>
-              Ajouter le lait petit à petit en mélangeant et veillant à ne laisser aucun grumeaux.</br>
-              Ajouter ensuite le beurre fondu au reste de la préparation puis bien mélanger.</br>
-              Ajouter les arômes : le rhum et la vanille.</br>
+              la farine avec le sucre puis ajouter les oeufs progressivement un à un.<br>
+              Ajouter le lait petit à petit en mélangeant et veillant à ne laisser aucun grumeaux.<br>
+              Ajouter ensuite le beurre fondu au reste de la préparation puis bien mélanger.<br>
+              Ajouter les arômes : le rhum et la vanille.<br>
               Dans une poêle bien chaude, faites sauter vos crèpes.
             </p>
           </div>
@@ -101,15 +101,16 @@
             <p class="preparation">Pâte à crêpes :
               Mets la farine, la fécule, le sucre, le sucre vanillé et la pincée de sel dans un
               saladier
-              et mélange tout.</br> Verse le lait de soja progressivement en mélangeant rapidement avec un fouet. </br>
+              et mélange tout.<br> Verse le lait de soja progressivement en mélangeant rapidement avec un fouet. <br>
               Dès que ta pâte est liquide, ajoute le rhum ou l'eau de fleur d'oranger et la cuillère à soupe d'huile.
-              </br>Tu peux
+              <br>Tu peux
               ajouter un peu d'eau pour rendre la texture vraiment fluide.
               Si tu as un peu de temps, laisse ta pâte reposer une heure environ.
-              Fais chauffer ta poêle légèrement huilée à feu vif.</br> Verse une louche de pâte et recouvre la poêle
-              avec.</br> Décolle la crêpe avec une spatule en vérifiant qu'elle soit suffisamment dorée. </br>Pour les
+              Fais chauffer ta poêle légèrement huilée à feu vif.<br> Verse une louche de pâte et recouvre la poêle
+              avec.<br> Décolle la crêpe avec une spatule en vérifiant qu'elle soit suffisamment dorée. <br>Pour les
               autres
-              crêpes, fais les cuire sur feu moyen.</p>
+              crêpes, fais les cuire sur feu moyen.
+            </p>
           </div>
         </article>
         <article>
@@ -140,16 +141,16 @@
             </div>
             <h3>Préparation</h3>
             <p class="preparation"> Fouettez les oeufs avec l'huile puis incorporez la farine, la Maïzena et le Rhum.
-              Délayez avec le lait et mélangez bien jusqu'à l'obtention d'une pâte lisse.</br>
-              Si des grumeaux se forment, mixez la pâte quelques minutes.</br>
-              Laissez reposer au moins 1 heure.</br>
+              Délayez avec le lait et mélangez bien jusqu'à l'obtention d'une pâte lisse.<br>
+              Si des grumeaux se forment, mixez la pâte quelques minutes.<br>
+              Laissez reposer au moins 1 heure.<br>
               Chauffez une poêle ou une crêpière et déposez-y une noix de beurre. Dès qu'il a fondu, versez une louche
               de
-              pâte et étalez-la uniformément sur la surface de cuisson afin de former une belle crêpe.</br>
+              pâte et étalez-la uniformément sur la surface de cuisson afin de former une belle crêpe.<br>
               Dès que la crêpe commence à sécher (1 minute maximum), retournez-la en la faisant sauter ou plus
               simplement
               à
-              la spatule.</br>
+              la spatule.<br>
               Une fois retournée, saupoudrez la crêpe d'un peu de sucre et passez un petit morceau de beurre sur la
               surface
               pour éviter que la crêpe ne soit trop sèche..</p>
@@ -169,7 +170,7 @@
           crêpe a fait son apparition. Le sarrasin, rapporté en France après
           les croisades en Asie, a permis de confectionner cette fine couche de pâte, de forme ronde. C’est le début de
           la galette bretonne ! Car nos crêpes salées sont toujours préparées avec de la farine de sarrasin, aussi
-          appelée farine de blé noir. L’avantage de cette farine est d’être sans gluten.</br>
+          appelée farine de blé noir. L’avantage de cette farine est d’être sans gluten.<br>
           En breton le mot Crêpe se dit « Krampouez »</p>
         <p><span class="iconify" data-icon="openmoji:bretagne-flag"></span>
           Pourquoi les Bretons mangent des crêpes ?
@@ -182,7 +183,7 @@
           La farine de blé s'utilise généralement pour confectionner des crêpes sucrées, et la farine de sarrasin pour
           des galettes salées.</p>
 
-        <p><span class="iconify" data-icon="subway:calendar-2"></span> Chandeleur :</br>
+        <p><span class="iconify" data-icon="subway:calendar-2"></span> Chandeleur :<br>
           Le 2 février, c’est la Chandeleur, appelée aussi la Fête des Chandelles. Tous les ans, la tradition veut que
           l’on cuisine plein de délicieuses crêpes à déguster en famille ou entre amis. Chacun doit faire sauter sa
           crêpe
@@ -215,8 +216,8 @@
         <p><img src="./images/vive-crepes.jpg" alt="crepe en l'air"></p>
 
       </aside>
-    </section>
-    <section id="outils">
+    </div>
+    <div id="outils">
       <h2 id="aide">Aide mémoire</h2>
       <div id="outils_div">
         <div id="tableau_gluten">
@@ -253,66 +254,67 @@
         <div id="video">
           <p>Comment faire la pâte a crêpes?</p>
           <iframe width="300" height="180" src="https://www.youtube.com/embed/7ODX4iOm6ao" title="YouTube video player"
-            frameborder="0"
+            style="border: 0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen></iframe>
+
         </div>
       </div>
-  </div>
-
-  </section>
-  <!-- formulaire -->
-  <section id="form">
-    <h2 id="contact">Me contacter</h2>
-
-    <div id="formulaire">
-      <form method="post" action="traitement.php">
-        <fieldset>
-          <legend>Me contacter</legend>
-          <label for="genre">Vous êtes ?</label></br>
-          <select name="genre" id="genre">
-            <option value="feminin">Madame</option>
-            <option value="masculin">Monsieur</option>
-          </select>
-          <label for="nom">Votre Nom :</label>
-          <input type="text" name="nom" id="nom" required />
-          <br />
-          <label for="question">Votre question :</label>
-          <textarea name="question" id="question"></textarea>
-          <label for="mail">Entrez votre e-mail</label>
-          <input type="email" name="mail" id="mail" required />
-          <input type="submit" value="Envoyer" />
-
-        </fieldset>
-      </form>
     </div>
 
-  </section>
-  <!-- footer -->
-  <footer>
-    <div id="contenair_footer">
-      <div id="footer">
-        <p>
-          Site réalisé par NJ_Web 2022
-        </p>
-        <p><a class="a-icone" href="#" target="_blank"><span class="iconify"
-              data-icon="akar-icons:facebook-fill"></span>
-          </a></p>
-        <p><a class="a-icone" href="https://www.linkedin.com/in/angie-pons-1078431aa/" target="_blank"><span
-              class="iconify" data-icon="akar-icons:linkedin-box-fill"></span>
-          </a></p>
 
-      </div>
-      <div id="footer_autres">
+    <!-- formulaire -->
+    <section id="form">
+      <h2 id="contact">Me contacter</h2>
 
-        <p><a href="https://elishaya13.github.io/SiteMaquillageResponsive/" target="_blank"><span class="iconify"
-              data-icon="icon-park-solid:other"></span> Maquillage de
-            fête en Vendée</p></a>
-        <p><a href="https://elishaya13.github.io/ExositeFF14/" target="_blank"><span class="iconify"
-              data-icon="icon-park-solid:other"></span> Evénements sur scène FFXIV</a></p>
+      <div id="formulaire">
+        <form method="post" action="traitement.php">
+          <fieldset>
+            <legend>Me contacter</legend>
+            <label for="genre">Vous êtes ?</label>
+            <select name="genre" id="genre">
+              <option value="feminin">Madame</option>
+              <option value="masculin">Monsieur</option>
+            </select>
+            <label for="nom">Votre Nom :</label>
+            <input type="text" name="nom" id="nom" required />
+            <br />
+            <label for="question">Votre question :</label>
+            <textarea name="question" id="question"></textarea>
+            <label for="mail">Entrez votre e-mail</label>
+            <input type="email" name="mail" id="mail" required />
+            <input type="submit" value="Envoyer" />
+
+          </fieldset>
+        </form>
       </div>
-    </div>
-  </footer>
+
+    </section>
+    <!-- footer -->
+    <footer>
+      <div id="contenair_footer">
+        <div id="footer">
+          <p>
+            Site réalisé par NJ_Web 2022
+          </p>
+          <p><a class="a-icone" href="#" target="_blank"><span class="iconify"
+                data-icon="akar-icons:facebook-fill"></span>
+            </a></p>
+          <p><a class="a-icone" href="https://www.linkedin.com/in/angie-pons-1078431aa/" target="_blank"><span
+                class="iconify" data-icon="akar-icons:linkedin-box-fill"></span>
+            </a></p>
+
+        </div>
+        <div id="footer_autres">
+
+          <p><a href="https://elishaya13.github.io/SiteMaquillageResponsive/" target="_blank"><span class="iconify"
+                data-icon="icon-park-solid:other"></span> Maquillage de
+              fête en Vendée</a></p>
+          <p><a href="https://elishaya13.github.io/ExositeFF14/" target="_blank"><span class="iconify"
+                data-icon="icon-park-solid:other"></span> Evénements sur scène FFXIV</a></p>
+        </div>
+      </div>
+    </footer>
   </div>
 </body>
 
