Changement titre de page + ajout icone navigateur

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     href="https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans&family=Noto+Sans+JP&family=Noto+Sans+Mono:wght@300&display=swap"
     rel="stylesheet">
   <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
-  <title>Les Crepes ma vie</title>
+  <link rel="shortcut icon" href="./images/icone_crepe.png" type="image/x-icon">
+  <title>Krampouez</title>
 </head>
 
 <body>
