--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     <!-----------------section aides memoire------------------------------------>
 
     <section id="bloc_aides">
-      <h2>Aide mémoire</h2>
+      <h2 id="aide">Aide mémoire</h2>
       <div id="aides_memoire">
         <div id="tableau_gluten">
           <p>Liste des farine avec et sans gluten</p>
